[WIP] Update code for java 21.